force-app/main/default/objects/Capability__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sprint</label>
    <referenceTo>Spring_Sprint__c</referenceTo>
    <relationshipLabel>Capabilities</relationshipLabel>
    <relationshipName>Capabilities</relationshipName>
    <type>Lookup</type>
</CustomField>