force-app/main/default/objects/Capability__c/listViews/Ops_Asset_SmallCell_Capabilities.listView-meta.xml
<ListView>
    <fullName>Ops_Asset_SmallCell_Capabilities</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Release__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>SmallCell</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Business</value>
    </filters>
    <label>Ops&amp;Asset SmallCell Capabilities</label>
</ListView>