force-app/main/default/objects/Capability__c/listViews/Ops_AssetManagement_Capabilities.listView-meta.xml
<ListView>
    <fullName>Ops_AssetManagement_Capabilities</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Release__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>notContain</operation>
        <value>Ticketing</value>
    </filters>
    <label>Ops&amp;AssetManagement Capabilities</label>
</ListView>