force-app/main/default/objects/Capability__c/listViews/Ticketing_Capabilities.listView-meta.xml
<ListView>
    <fullName>Ticketing_Capabilities</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>Ticketing - ServiceCloud</value>
    </filters>
    <label>Ticketing Capabilities</label>
</ListView>